# karei-dev

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Trunk.toml  docker-compose.yml  go.mod  go.sum  index.html  main.go  package.json  tailwind.config.js
.github/workflows/: build.yml
api/: api.go  go.mod  main.go
api/v1/: forks.go  go.mod  projects.go  v1.go
apiv1/: forks.go  go.mod  main.go  projects.go
backend/: Makefile  go.sum
frontend/: Makefile
frontend/src/: main.rs
src/: main.rs  router.rs  utils.rs
src/components/: button.rs  experience_container.rs  general_container.rs  homebutton.rs  icon.rs  mod.rs  navbutton.rs  projectblock.rs
src/pages/: about.rs  forked.rs  home.rs  images.rs  mod.rs  not_found.rs  projects.rs
static/: styles.css  tailwind.css
styles/: tailwind.css
utils/: go.mod  main.go  utils.go
