[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {git = "https://github.com/yewstack/yew", branch = "master"}
yew-router = { git = "https://github.com/yewstack/yew", branch="master" }
yewtil = { git = "https://github.com/yewstack/yew", branch="master" }
yew-services = { git = "https://github.com/yewstack/yew", branch="master" }
anyhow = "1.0"
serde = "1.0"