[package]
name = "mxrr-dev"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {git = "https://github.com/yewstack/yew", branch = "master", features = ["csr"]}
yew-router = { git = "https://github.com/yewstack/yew", branch="master" }
anyhow = "1.0"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.web-sys]
version = "0.3"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  "console",
]